# RealEngine

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  RealEngine.sln  RealEngine.vcxproj  RealEngine.vcxproj.filters
assets/: metal_rough_ball.xml  pbr.xml  pica_pica.xml  sponza.xml  test_scene.xml
assets/model/: backdrop.gltf  box.gltf  cylinder.gltf  sphere.gltf
assets/model/ClearCoatTest/: ClearCoatTest.gltf
assets/model/CornellBox/: CornellBox.gltf
assets/model/DamagedHelmet/: DamagedHelmet.gltf  Default_AO.dds
assets/model/SciFiHelmet/: SciFiHelmet.gltf  SciFiHelmet_AmbientOcclusion.dds
assets/model/SheenCloth/: SheenCloth.gltf  technicalFabricSmall_basecolor_256.dds  technicalFabricSmall_normal_256.dds  technicalFabricSmall_orm_256.dds  technicalFabricSmall_sheen_256.dds
assets/model/biped_robot/: scene.gltf
assets/model/old_cooking_pot/: license.txt  scene.gltf
assets/model/reap_the_whirlwind/: license.txt  scene.gltf
assets/model/robot/: scene.gltf
assets/textures/: PreintegratedGF.dds  output_pmrem.dds
shaders/: IntelTAA.hlsli  XeGTAO.hlsli  atmosphere.hlsli  automatic_exposure.hlsl  automatic_exposure_histogram.hlsl  bilinear.hlsli  billboard_sprite.hlsl  bloom.hlsl  bloom.hlsli  brdf.hlsli  cas.hlsl  clear_uav.hlsl  clustered_shading.hlsl  clustered_shading.hlsli  common.hlsli  composite_light.hlsl  compute_animation.hlsl  copy.hlsl  cubemap_spd.hlsl  debug.hlsli  debug_line.hlsl  debug_print.hlsl  direct_lighting.hlsl  exposure.hlsli  extract_half_depth_normal.hlsl  ffx_a.h  ffx_lpm.h  ffx_sssr.h  fsr2_tmp.hlsl  fxaa.hlsl  global_constants.hlsli  gpu_scene.hlsli  gtao.hlsl  gtso.hlsli  hzb.hlsl  hzb_reprojection.hlsl  ibl_prefilter.hlsl  im3d.hlsl  imgui.hlsl  importance_sampling.hlsli  (+40 more)
shaders/dof/: circular_filter_far.hlsl  circular_filter_near.hlsl  composite.hlsl  dof_common.hlsli  downsample.hlsl  tile_coc.hlsl
shaders/hybrid_stochastic_reflection/: classify_tiles.hlsl  denoiser_prefilter.hlsl  denoiser_reproject.hlsl  denoiser_resolve_temporal.hlsl  hsr_common.hlsli  prepare_indirect_args.hlsl  ray_trace.hlsl  ssr.hlsl
shaders/motion_blur/: motion_blur_common.hlsli  neighbor_max.hlsl  pack_velocity_depth.hlsl  reconstruction_filter.hlsl  tile_max.hlsl
shaders/ray_traced_shadow/: denoiser_filter.hlsl  denoiser_prepare.hlsl  denoiser_tileclassification.hlsl  ray_trace.hlsl
shaders/recurrent_blur/: blur.hlsl  blur_common.hlsli  history_reconstruction.hlsl  mip_generation.hlsl  mip_generation_depth.hlsl  pre_blur.hlsl  sh.hlsli  temporal_accumulation.hlsl
shaders/restir_gi/: denoiser_spatial.hlsl  denoiser_temporal.hlsl  initial_sampling.hlsl  ray_trace.hlsl  reservoir.hlsli  restir_resolve.hlsl  spatial_resampling.hlsl  temporal_resampling.hlsl
shaders/terrain/: constants.hlsli  erosion.hlsl  hardness.hlsl  heightmap.hlsl  noise.hlsli  terrain.hlsl
source/: engine.cpp  engine.h  main.cpp  source.cmake
source/core/: camera.cpp  camera.h  directional_light.cpp  directional_light.h  eastl_allocator.cpp  eastl_allocator.h  editor.cpp  editor.h  engine.cpp  engine.h  gui.cpp  gui.h  i_light.cpp  i_light.h  i_visible_object.cpp  i_visible_object.h  math.h  memory.h  model.cpp  model.h  platform.h  post_processor.h  sky_sphere.cpp  sky_sphere.h  world.cpp  world.h
source/editor/: editor.cpp  editor.h  im3d_impl.cpp  im3d_impl.h  imgui_impl.cpp  imgui_impl.h
source/gfx/: gfx.cpp  gfx.h  gfx_buffer.h  gfx_command_list.h  gfx_define.h  gfx_defines.h  gfx_descriptor.h  gfx_device.h  gfx_fence.h  gfx_heap.h  gfx_pipeline_state.h  gfx_resource.h  gfx_rt_blas.h  gfx_rt_tlas.h  gfx_shader.h  gfx_swapchain.h  gfx_texture.h  i_gfx_buffer.h  i_gfx_command_list.h  i_gfx_descriptor.h  i_gfx_device.h  i_gfx_fence.h  i_gfx_heap.h  i_gfx_pipeline_state.h  i_gfx_resource.h  i_gfx_rt_blas.h  i_gfx_rt_tlas.h  i_gfx_sampler.h  i_gfx_shader.h  i_gfx_swapchain.h  i_gfx_texture.h
source/gfx/d3d12/: ags.h  (+32 more)
source/physics/: physics.cpp  physics.h  physics_body_activation_listener.cpp  physics_body_activation_listener.h  physics_broad_phase_layer.cpp  physics_broad_phase_layer.h  physics_constraint.h  physics_contact_listener.cpp  physics_contact_listener.h  physics_debug_renderer.cpp  physics_debug_renderer.h  physics_defines.h  physics_layer.h  physics_layer_filter.cpp  physics_layer_filter.h  physics_object_layer.cpp  physics_rigid_body.h  physics_shape.h  physics_system.cpp  physics_system.h
source/renderer/: base_pass.cpp  base_pass.h  clear_uav.cpp  clear_uav.h  clustered_shading.cpp  clustered_shading.h  directed_acyclic_graph.cpp  directed_acyclic_graph.h  fxaa.cpp  fxaa.h  gpu_debug_line.cpp  gpu_debug_line.h  gpu_driven_debug_line.cpp  gpu_driven_debug_line.h  gpu_driven_debug_print.cpp  gpu_driven_debug_print.h  gpu_driven_stats.cpp  gpu_driven_stats.h  gpu_scene.cpp  gpu_scene.h  hierarchical_depth_buffer.cpp  hierarchical_depth_buffer.h  hzb_occlusion_culling.cpp  hzb_occlusion_culling.h  marschner_hair_lut.cpp  marschner_hair_lut.h  oidn.cpp  oidn.h  path_tracer.cpp  path_tracer.h  pipeline_cache.cpp  pipeline_cache.h  render_batch.h  render_graph.cpp  render_graph.h  render_graph.inl  render_graph_blackboard.h  render_graph_builder.cpp  render_graph_builder.h  render_graph_handle.h  (+34 more)
source/utils/: assert.h  autorelease_pool.h  fmt.h  gui_util.h  linear_allocator.h  log.h  math.h  memory.h  parallel_for.h  profiler.h  string.h  system.h
source/windows/: main.cpp  resource.h
source/world/: animation.cpp  animation.h  billboard_sprite.cpp  billboard_sprite.h  camera.cpp  camera.h  directional_light.cpp  directional_light.h  gltf_loader.cpp  gltf_loader.h  i_light.h  i_visible_object.cpp  i_visible_object.h  light.cpp  light.h  mesh_material.cpp  mesh_material.h  meshlet_generator.h  model.cpp  model.h  point_light.cpp  point_light.h  rect_light.cpp  rect_light.h  resource_cache.cpp  resource_cache.h  skeletal_mesh.cpp  skeletal_mesh.h  skeleton.cpp  skeleton.h  sky_sphere.cpp  sky_sphere.h  spot_light.cpp  spot_light.h  static_mesh.cpp  static_mesh.h  visible_object.cpp  visible_object.h  world.cpp  world.h
(+385 files in other folders)
